package com.game.model;

import java.io.Serializable;
import java.util.List;

import com.fasterxml.jackson.annotation.JsonSubTypes;
import com.fasterxml.jackson.annotation.JsonTypeInfo;
import com.game.model.character.*;
import com.game.model.story.FlagMap;
import com.game.model.story.StoryNode;

public class GameStateMemento implements Serializable {
    public int nPlayers;
    public boolean autoSaveEnabled;

    public Party party;
    public WorldPosition worldPosition;
    public FlagMap flagMap;
    public StoryNode currentStoryNode;
    public List<Enemy> enemies;
    public List<String> maps;
    // public Inventory inventory;

    public int mapInd; // es: "Map1"

    @JsonTypeInfo(use = JsonTypeInfo.Id.NAME, property = "type")
    @JsonSubTypes({
            @JsonSubTypes.Type(value = MerchantNPC.class, name = "MerchantNPC"),
            @JsonSubTypes.Type(value = MovesNPC.class, name = "MovesNPC")
    })
    public List<NPC> npc;

    public GameStateMemento(GameState gameState) {
        // this.selectedCharacters = new ArrayList<>(gameState.getParty());
        this.party = gameState.getParty();
        this.enemies = gameState.getEnemies();
        this.worldPosition = gameState.worldPosition;
        this.flagMap = gameState.getFlagMap();
        this.currentStoryNode = gameState.getCurrentStoryNode();
        this.nPlayers = gameState.nPlayers;
        this.autoSaveEnabled = gameState.autoSaveEnabled;
        // this.inventory = gameState.inventory;
        this.mapInd = gameState.getMapInd();
        this.maps = gameState.getMaps().stream().map(m -> m.getClass().getName()).toList();
        this.npc = gameState.getNpc();
    }

    public GameStateMemento() {
    }

    @Override
    public String toString() {
        return "GameStateMemento{" +
                "nPlayers=" + nPlayers +
                ", autoSaveEnabled=" + autoSaveEnabled +
                ", mapInd=" + mapInd +
                ", worldPosition=" + (worldPosition != null ? worldPosition.toString() : "null") +
                ", party=" + (party != null ? party.toString() : "null") +
                ", enemies=" + (enemies != null ? enemies.size() + " enemies" : "null") +
                ", npc=" + (npc != null ? npc.size() + " npcs" : "null") +
                //", flagMap=" + (flagMap != null ? flagMap + " flags" : "null") +
                '}';
    }
}
